Creates function to get all queued tasks with an optional `task_type` filter
(Refs #963)

--- a/openrem/remapp/templates/remapp/exports-queue.html
+++ b/openrem/remapp/templates/remapp/exports-queue.html
@@ -8,9 +8,9 @@
     <th></th>
     {% for tsk in queued %}
       <tr>
-        <td>{{ tsk.id }}</td>
-        <td>{{ tsk.args.1 }}</td>
-        <td>{{ forloop.counter }}</td>
+        <td>{{ tsk.uuid }}</td>
+        <td>{{ tsk.task_type }}</td>
+        <td>{{ tsk.queue_position }}</td>
         <td>Remove</td>
       </tr>
     {% endfor %}
