--- a/openrem/remapp/templates/remapp/exports-queue.html
+++ b/openrem/remapp/templates/remapp/exports-queue.html
@@ -5,13 +5,14 @@
     <th>Task ID</th>
     <th>Export type</th>
     <th>Queue position</th>
+    <th>Action</th>
     <th></th>
     {% for tsk in queued %}
       <tr>
         <td>{{ tsk.uuid }}</td>
         <td>{{ tsk.task_type }}</td>
         <td>{{ tsk.queue_position }}</td>
-        <td>Remove</td>
+        <td><a href="/export/remove/{{ tsk.uuid }}/" class="btn btn-danger">Remove</a></td>
       </tr>
     {% endfor %}
   </table>
