--- a/openrem/remapp/templates/remapp/tasks.html
+++ b/openrem/remapp/templates/remapp/tasks.html
@@ -16,7 +16,11 @@
   </tr>
   {% for task in tasks %}
     <tr>
-      <td>{{ task.id }}</td>
+      {% if type == 'queued' %} 
+        <td>{{ task.task_id }}</td>
+      {% else %}
+        <td>{{ task.uuid }}</td>
+      {% endif %}
       <td>{{ task.task_type|safe }}</td>
       {% if type == "queued" %} 
         <td>{{ task.queue_position }}</td>
@@ -52,7 +56,7 @@
         </td>
       {% elif type == 'queued' %} 
       <td>
-        <a class="btn btn-danger" href="/tasks/tasks/remove_task/{{ task.id }}/" role="button">
+        <a class="btn btn-danger" href="/tasks/tasks/remove_task/{{ task.task_id }}/" role="button">
           Remove task
         </a>
       </td>
