--- a/openrem/remapp/templates/remapp/exports-queue.html
+++ b/openrem/remapp/templates/remapp/exports-queue.html
@@ -9,10 +9,10 @@
     <th></th>
     {% for tsk in queued %}
       <tr>
-        <td>{{ tsk.id }}</td>
+        <td>{{ tsk.task_id }}</td>
         <td>{{ tsk.task_type }}</td>
         <td>{{ tsk.queue_position }}</td>
-        <td><a href="/export/remove/{{ tsk.id }}/" class="btn btn-danger">Remove</a></td>
+        <td><a href="/export/remove/{{ tsk.task_id }}/" class="btn btn-danger">Remove</a></td>
       </tr>
     {% endfor %}
   </table>
