Added missing colon and units from peak skin dose entry in alert e-mail. Refs issue #970

--- a/openrem/remapp/templates/remapp/rf_dose_alert_email_template.html
+++ b/openrem/remapp/templates/remapp/rf_dose_alert_email_template.html
@@ -163,7 +163,7 @@
                         </tr>
                     {% endwith %}{% endfor %}
                 <tr>
-                    <td>Peak skin dose</td>
+                    <td>Peak skin dose (Gy):</td>
                     <td>{% if peak_skin_dose == None %}
                             Not calculated
                         {% else %}
