Making it clear that the PSD values are those calculated to the openSkin phantom. Refs issue #970

--- a/openrem/remapp/templates/remapp/rf_dose_alert_email_template.html
+++ b/openrem/remapp/templates/remapp/rf_dose_alert_email_template.html
@@ -164,7 +164,7 @@
                     {% endwith %}{% endfor %}
                 <tr>
                     {% with psd_data=study.skindosemapresults_set.get %}
-                    <td>Peak skin dose (Gy):</td>
+                    <td>Calculated peak skin dose to openSkin phantom (Gy):</td>
                     <td>{% if psd_data.peak_skin_dose == None %}
                             Not calculated
                         {% else %}
@@ -233,7 +233,7 @@
                         <th scope="col">Accession number</th>
                         <th scope="col">Total DAP (cGy.cm<sup>2</sup>)</th>
                         <th scope="col">Total dose at RP (Gy)</th>
-                        <th scope="col">Peak skin dose (Gy)</th>
+                        <th scope="col">Calculated peak skin dose to openSkin phantom (Gy):</th>
                         <th scope="col">OpenREM link</th>
                     </tr>
                     {% for each_study in studies_in_week_delta %}
