Adds basic view for all issued alerts
(Refs #974)

--- a/openrem/remapp/templates/base.html
+++ b/openrem/remapp/templates/base.html
@@ -67,6 +67,10 @@
                   {% block navnm %}
                     <li>{% endblock %}<a href="{% url 'nm_summary_list_filter' %}">{% trans "NM/PET" %}</a></li>
                 {% endif %}
+                {% if request.user.userprofile.displayAlerts %}
+                  {% block navalert %}
+                    <li>{% endblock %}<a href="{% url 'alert_summary' %}">{% trans "Alerts" %}</a></li>
+                {% endif %}
             {% endblock %}
           </ul>
           {% block loginlink %}
